name:                hocker
version:             0.1.0.0
synopsis:            A haskell docker client
description:         Docker client written in haskell
license:             MIT
license-file:        LICENSE
author:              Alexander Thiemann <mail@agrafix.net>
maintainer:          mail@agrafix.net
copyright:           (c) 2014 Alexander Thiemann
category:            Docker
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Docker.Client
  other-modules:       Docker.Rest, Docker.Aeson, Docker.Types
  build-depends:       base >=4.6 && <4.7,
                       text >=1.1 && <1.2,
                       attoparsec >= 0.12 && <0.13,
                       io-streams >=1.1 && <1.3,
                       http-types >=0.8 && <0.9,
                       network >=2.3 && <2.6,
                       bytestring >=0.10 && <0.11,
                       aeson >=0.8 && <0.9
  hs-source-dirs:      src/lib
  default-language:    Haskell2010
  ghc-options: -Wall -fno-warn-orphans

executable hocker
  main-is:             Main.hs
  build-depends:       base ==4.6.*,
                       hocker
  hs-source-dirs:      src/prog
  default-language:    Haskell2010
  ghc-options: -Wall -fno-warn-orphans
